--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Metas 2024 📝</h1>
         <p>Defina uma nova meta para o ano de 2024 e adicione-a à sua lista de objetivos. Certifique-se de que a meta
             seja clara e específica, e identifique o tipo de meta que você está definindo!🤩</p>
-        <div class="container-inputs">
+        <form class="container-inputs">
             <div class="input-text-box">
                 <div class="input-field">
                     <input type="text" name="inputTarefa" id="inputTarefa" placeholder="Digite sua meta!">
@@ -32,7 +32,7 @@
                 </select>
                 <button>Adcionar</button>
             </div>
-        </div>
+        </form>
     </header>
     <script type="module" src="./assets/js/script.js"></script>
 </body>
