--- a/index.html
+++ b/index.html
@@ -30,10 +30,63 @@
                     <option value="mensal">Mensal</option>
                     <option value="ano">Durante o Ano</option>
                 </select>
-                <button>Adcionar</button>
+                <button id="btnAdc">Adcionar</button>
             </div>
         </form>
     </header>
+
+    <main>
+        <div class="cardTarefas">
+            <h2 class="tituloTarefas">Cotidiano</h2>
+            <div class="containerTarefas">
+                <div class="tarefaBox">
+                    <span class="material-symbols-outlined" class="checkIcon">
+                        radio_button_unchecked
+                    </span>
+                    <p class="nomeTarefa">Beber agua</p>
+                    <button>
+                        <span class="material-symbols-outlined deleteIcon">
+                        delete
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="cardTarefas">
+            <h2 class="tituloTarefas">Mensal</h2>
+            <div class="containerTarefas">
+                <div class="tarefaBox">
+                    <span class="material-symbols-outlined" class="checkIcon">
+                        radio_button_unchecked
+                    </span>
+                    <p class="nomeTarefa">Beber agua</p>
+                    <button>
+                        <span class="material-symbols-outlined deleteIcon">
+                        delete
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="cardTarefas">
+            <h2 class="tituloTarefas">Por Ano</h2>
+            <div class="containerTarefas">
+                <div class="tarefaBox">
+                    <span class="material-symbols-outlined" class="checkIcon">
+                        radio_button_unchecked
+                    </span>
+                    <p class="nomeTarefa">Beber agua</p>
+                    <button>
+                        <span class="material-symbols-outlined deleteIcon">
+                        delete
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
     <script type="module" src="./assets/js/script.js"></script>
 </body>
 
