--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="input-submit-box">
                 <select name="tipoMetaInput" id="tipoMetaInput"> 
                     <option value="tipo">Escolha</option>
-                    <option value="cotidiano">Cotidiano</option>
-                    <option value="mensal">Mensal</option>
-                    <option value="ano">Durante o Ano</option>
+                    <option value="ct1">Cotidiano</option>
+                    <option value="ct2">Mensal</option>
+                    <option value="ct3">Durante o Ano</option>
                 </select>
                 <button id="btnAdc">Adcionar</button>
             </div>
@@ -38,8 +38,8 @@
     <main>
         <div class="cardTarefas">
             <h2 class="tituloTarefas">Cotidiano</h2>
-            <div class="containerTarefas">
-                <div class="tarefaBox">
+            <div class="containerTarefas" id="ct1">
+                <!-- <div class="tarefaBox">
                     <span class="material-symbols-outlined" class="checkIcon">
                         radio_button_unchecked
                     </span>
@@ -49,13 +49,13 @@
                         delete
                         </span>
                     </button>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="cardTarefas">
             <h2 class="tituloTarefas">Mensal</h2>
-            <div class="containerTarefas">
-                <div class="tarefaBox">
+            <div class="containerTarefas" id="ct2">
+                <!-- <div class="tarefaBox">
                     <span class="material-symbols-outlined" class="checkIcon">
                         radio_button_unchecked
                     </span>
@@ -65,15 +65,15 @@
                         delete
                         </span>
                     </button>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="cardTarefas">
+        <div class="cardTarefas ">
             <h2 class="tituloTarefas">Por Ano</h2>
-            <div class="containerTarefas">
-                <div class="tarefaBox">
-                    <span class="material-symbols-outlined" class="checkIcon">
-                        radio_button_unchecked
+            <div class="containerTarefas" id="ct3">
+                <!-- <div class="tarefaBox clicado">
+                    <span class="material-symbols-outlined checkIcon">
+                        radio_button_checked
                     </span>
                     <p class="nomeTarefa">Beber agua</p>
                     <button>
@@ -81,7 +81,7 @@
                         delete
                         </span>
                     </button>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
