--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 </select>
                 <button id="btnAdc">Adcionar</button>
             </div>
+            <span style="color: red;" id="warnerSpan">
+                
+            </span>
         </form>
     </header>
 
@@ -39,17 +42,7 @@
         <div class="cardTarefas">
             <h2 class="tituloTarefas">Cotidiano</h2>
             <div class="containerTarefas" id="ct1">
-                <!-- <div class="tarefaBox">
-                    <span class="material-symbols-outlined" class="checkIcon">
-                        radio_button_unchecked
-                    </span>
-                    <p class="nomeTarefa">Beber agua</p>
-                    <button>
-                        <span class="material-symbols-outlined deleteIcon">
-                        delete
-                        </span>
-                    </button>
-                </div> -->
+                
             </div>
         </div>
         <div class="cardTarefas">
@@ -87,7 +80,7 @@
     </main>
 
 
-    <script type="module" src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
