--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2 class="tituloTarefas">Mensal</h2>
             <div class="containerTarefas" id="ct2">
                 <!-- <div class="tarefaBox">
-                    <span class="material-symbols-outlined" class="checkIcon">
+                    <span class="material-symbols-outlined checkIcon">
                         radio_button_unchecked
                     </span>
                     <p class="nomeTarefa">Beber agua</p>
